--- a/Kaggle practice.ipynb
+++ b/Kaggle practice.ipynb
@@ -1518,19 +1518,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "id": "69100af2",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.3299060228364936"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'linear_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# initialize\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m multi_mod \u001b[39m=\u001b[39m linear_model\u001b[39m.\u001b[39mLinearRegression()\n\u001b[1;32m      4\u001b[0m \u001b[39m# this is the structure we need to use to set up multiple predictors\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39m# (I am following this tutorial: https://www.youtube.com/watch?v=O0HQnTJhr70&t=961s)\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m# just putting everything in here for now\u001b[39;00m\n\u001b[1;32m      7\u001b[0m predictors \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame([ clean_log_data[\u001b[39m'\u001b[39m\u001b[39mlog_chf\u001b[39m\u001b[39m'\u001b[39m], \n\u001b[1;32m      8\u001b[0m                            clean_data[\u001b[39m'\u001b[39m\u001b[39mlength [mm]\u001b[39m\u001b[39m'\u001b[39m],\n\u001b[1;32m      9\u001b[0m                            clean_log_data[\u001b[39m'\u001b[39m\u001b[39mlog_D_h\u001b[39m\u001b[39m'\u001b[39m], \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     12\u001b[0m                            clean_dummies\u001b[39m.\u001b[39mannulus,\n\u001b[1;32m     13\u001b[0m                            clean_dummies\u001b[39m.\u001b[39mplate])\u001b[39m.\u001b[39mT\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'linear_model' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1555,7 +1556,8 @@
     "# fit model to data\n",
     "multi_mod.fit( X = predictors, y = clean_data['x_e_out [-]'] )\n",
     "\n",
-    "multi_mod.score( X = predictors, y = clean_data['x_e_out [-]'] )"
+    "multi_mod.score( X = predictors, y = clean_data['x_e_out [-]'] )\n",
+    "\n"
    ]
   },
   {
